--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <header>
+      <a href="#"><span>WEB</span><span>STUDIO</span></a>
       <nav>
         <ul>
-          <li><span>WEB</span><span>STUDIO</span></li>
-          <li>Studio</li>
-          <li>Portfolio</li>
-          <li>Contacts</li>
+          <li><a href="#">Studio</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
       <div>
@@ -26,74 +26,86 @@
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </div>
-      <article>
-        <h3>Strategy</h3>
-        <p>
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </p>
-      </article>
-      <article>
-        <h3>Punctuality</h3>
-        <p>
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
-      </article>
-      <article>
-        <h3>Diligence</h3>
-        <p>
-          Research and confirm brands that present the strongest digital growth
-          opportunities and minimize risk.
-        </p>
-      </article>
-      <article>
-        <h3>Technologies</h3>
-        <p>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </p>
-      </article>
+      <section>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
       <section>
         <h2>What are we doing</h2>
-        <img src="/images/screen.jpg" alt="screen" width="360" />
-        <img
-          src="/images/four-smartphones.jpg"
-          alt="four smartphones"
-          width="360"
-        />
-        <img
-          src="/images/notebook-and-smartphone.jpg"
-          alt="notebook and smartphone"
-          width="360"
-        />
+        <ul>
+          <li><img src="./images/screen.jpg" alt="screen" width="360" /></li>
+          <li>
+            <img
+              src="./images/four-smartphones.jpg"
+              alt="four smartphones"
+              width="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/notebook-and-smartphone.jpg"
+              alt="notebook and smartphone"
+              width="360"
+            />
+          </li>
+        </ul>
       </section>
       <section>
         <h2>Our Team</h2>
-        <article>
-          <img src="/images/first-man.jpg" alt="man" width="260" />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-        </article>
-        <article>
-          <img src="/images/second-man.jpg" alt="man" width="260" />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
-        </article>
-        <article>
-          <img src="/images/girl.jpg" alt="girl" width="260" />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
-        </article>
-        <article>
-          <img src="/images/third-man.jpg" alt="man" width="260" />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </article>
+        <ul>
+          <li>
+            <img src="./images/first-man.jpg" alt="man" width="260" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/second-man.jpg" alt="man" width="260" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./images/girl.jpg" alt="girl" width="260" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/third-man.jpg" alt="man" width="260" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
-      <h3><span>WEB</span><span>STUDIO</span></h3>
+      <a href="#"><span>WEB</span><span>STUDIO</span></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
