--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <section>
         <h2>What are we doing</h2>
         <ul>
-          <li><img src="./images/screen.jpg" alt="screen" width="360" /></li>
+          <li><img src="../images/screen.jpg" alt="screen" width="360" /></li>
           <li>
             <img
               src="./images/four-smartphones.jpg"
